Slack Security  : redirect URL에 맞는 뷰, 컨트롤러 작성

--- a/stock-data-api/src/main/resources/templates/index.html
+++ b/stock-data-api/src/main/resources/templates/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>WELCOME</h1>
+<a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=680595488112.691875062899"><img src="https://api.slack.com/img/sign_in_with_slack.png" /></a>
 </body>
 </html>
