--- a/stock-data-api/src/main/resources/templates/index.html
+++ b/stock-data-api/src/main/resources/templates/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>WELCOME</h1>
-<a href="https://slack.com/oauth/authorize?scope=identity.basic&client_id=680595488112.691875062899"><img src="https://api.slack.com/img/sign_in_with_slack.png" /></a>
+<a href="https://slack.com/oauth/authorize?
+        scope=identity.basic
+        &client_id=680595488112.691875062899">
+    <img src="https://api.slack.com/img/sign_in_with_slack.png" />
+</a>
 </body>
 </html>
