--- a/stock-data-api/src/main/resources/templates/test-slack-signin.html
+++ b/stock-data-api/src/main/resources/templates/test-slack-signin.html
@@ -48,10 +48,28 @@
             }
         )
         .then(function(response){
+        	var data = response.data;
         	console.log('response >>> ', response);
+        	console.log('scope          >>> ', data.scope);
+        	console.log('access_token   >>> ', data.access_token);
+	        console.log('ok             >>> ', data.ok);
+	        console.log('team           >>> ', data.team);
+
+	        axios.get(
+	        	'httsp://slack.com/api/users.identity',
+                {
+                	params:{
+                		token: data.access_token
+                    }
+                }
+            )
+            .then(function(response){
+            	console.log('api resource server is done');
+            	console.log('response >>> ', response);
+            })
         });
 
-        url = BASE_URL + '?'+'client_id='+client_id+'&'+'client_secret='+client_secret+'&'+'code='+code;
+        // url = BASE_URL + '?'+'client_id='+client_id+'&'+'client_secret='+client_secret+'&'+'code='+code;
 
         // $.ajax({
         //     url: url,
