Slack 인증 절차 내재화  : CORS 패턴 변경 (컨트롤러 url 변경으로 인한 변경, auth/slack/proxy/grant,redirected)  : Security 설정 변경 (컨트롤러 URL 변경 반영)  : html 내에 존재하는 client_id 제거  : user resource 질의방식, grant 획득 방식 변경

--- a/stock-data-api/src/main/resources/templates/index.html
+++ b/stock-data-api/src/main/resources/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>WELCOME</title>
+    <script type="text/javascript" src="/static/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="/static/axios.min.js"></script>
 </head>
 <body>
 <h1>WELCOME</h1>
-<a href="https://slack.com/oauth/authorize?
-        scope=identity.basic
-        &client_id=680595488112.691875062899">
+<a id="signin_slack" style="cursor: pointer;" href="/auth/slack/proxy/grant">
     <img src="https://api.slack.com/img/sign_in_with_slack.png" />
 </a>
+
 </body>
 </html>
