--- a/stock-data-api/src/main/resources/templates/index.html
+++ b/stock-data-api/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>WELCOME</h1>
 <a id="signin_slack" style="cursor: pointer;" href="/auth/slack/proxy/grant">
-    <img src="https://api.slack.com/img/sign_in_with_slack.png" />
+    <img src="/static/assets/img/sign_in_with_slack.png" />
 </a>
 
 </body>
