--- a/stock-data-api/src/main/resources/templates/home.html
+++ b/stock-data-api/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>WELCOME</title>
     <script type="text/javascript" src="/static/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="/static/axios.min.js"></script>
+    <script type="text/javascript" src="/static/assets/js/axios/axios.min.js"></script>
 </head>
 <body>
 <h1> Home </h1>
