--- a/stock-data-web/src/sidebar/Sidebar.css
+++ b/stock-data-web/src/sidebar/Sidebar.css
@@ -9,12 +9,24 @@
     width:300px;
 
     /* background-color 지정 */
-    background-color: #343a40;
+    /*background-color: #343a40;*/
+    background-color: #212529;
 
     /* 왼쪽 전부 차지하도록 */
     position: fixed;
     overflow: hidden;
     height: 100%;
+}
+.about-bg-img{
+    /*background-image: url('/assets/img/about/cloud1.jpg');*/
+    /*background-image: url('/assets/img/about/rocket_and_arrow.jpg');*/
+    background-image: url('/assets/img/about/laptop3.jpg');
+    /*background-image: url('/assets/img/about/cloud2.jpg');*/
+    width:100%;
+    height:100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 .page-area {
     /* 오른쪽 컨텐츠 영역 */
@@ -24,28 +36,33 @@
     position: absolute;
     width:auto;
     margin-left:300px;
+    width:100%;
     height:100%;
     float: right;
 }
 .sidebar > ul{
     list-style-type: none;
-    margin: 0;
+    /*margin: 0;*/
     padding: 0;
+    margin-top: 200px;
 }
 .sidebar > ul > li a {
     display: block;
     width: 300px;
-    color: #000;
-    padding: 8px 16px;
+    /*color: #000;*/
+    padding: 8px 0px 16px 50px;
     text-decoration: none;
     font-weight: 900;
-    color: #dbe4ff;
+    font-size: 15pt;
+    font-family: Verdana, Arial, Consolas, Georgia, "Malgun Gothic", serif;
+    color: #1098ad;
 }
 .sidebar > ul> li a:hover{
-    background-color: #555;
-    color: white;
+    /*background-color: #555;*/
+    background-color: #74c0fc;
+    color: black;
 }
 .sidebar > ul > li .active{
     background-color: #4CAF50;
-    color: white;
+    color: black;
 }
